<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:text="@string/registration"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_change_mode_button"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:text="@string/enter"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/email_login"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_line" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="A"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ll_3"
            app:layout_constraintRight_toRightOf="@id/ll_3"
            app:layout_constraintTop_toTopOf="@id/ll_3"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/tv_restore_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="@id/ll_3"
            app:layout_constraintTop_toBottomOf="@id/ll_3" />


        <LinearLayout
            android:id="@+id/ll_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/tv_action_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/password_again"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_line" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_blue_button"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/or" />

        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/ll_google" />

        <LinearLayout
            android:id="@+id/ll_vk"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_vk_google_buttons"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ll_google"
            app:layout_constraintTop_toTopOf="@id/ll_google">

            <ImageView
                android:id="@+id/icon_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_vk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:text="@string/vk"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_vk_google_buttons"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ll_vk"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/icon_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:text="@string/google"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>