<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imv_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:civ_border_color="@color/blue"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:textColor="@color/text_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/imv_avatar"
                app:layout_constraintTop_toTopOf="@id/imv_avatar"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <ImageView
                android:id="@+id/ic_karma"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_karma"
                android:textColor="@color/text_dark"
                app:layout_constraintBottom_toTopOf="@id/tv_userID"
                app:layout_constraintLeft_toRightOf="@id/imv_avatar" />

            <TextView
                android:id="@+id/tv_karma_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:textColor="@color/text_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ic_karma"
                app:layout_constraintLeft_toRightOf="@id/ic_karma" />

            <ImageView
                android:id="@+id/ic_profi"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_profi"
                app:layout_constraintBottom_toBottomOf="@id/ic_karma"
                app:layout_constraintLeft_toRightOf="@id/tv_karma_value" />

            <TextView
                android:id="@+id/tv_profi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:textColor="@color/text_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/ic_karma"
                app:layout_constraintLeft_toRightOf="@id/ic_profi" />

            <TextView
                android:id="@+id/tv_userID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/userid"
                android:textColor="@color/text_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imv_avatar"
                app:layout_constraintLeft_toRightOf="@id/imv_avatar" />

            <TextView
                android:id="@+id/tv_userID_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:textColor="@color/text_light"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@id/tv_userID"
                app:layout_constraintTop_toTopOf="@id/tv_userID" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/date_of_birth"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_line" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/city"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_line" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/ll_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_line" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_save_changes"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_blue_button"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_userID" />

        <TextView
            android:id="@+id/tv_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/fotos"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_orders_ex_rework" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_fotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_foto" />

        <Button
            android:id="@+id/bt_delete_all_fotos"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_stroke_red"
            android:text="@string/delete_all_fotos"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/recycler_fotos" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>